Small cleanup and refactoring (#1)